[gd_scene load_steps=3 format=2]

[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Green_Related/GUIRelated_V3/Green_WholeScreenGUI_ChosenList_V3.gd" type="Script" id=1]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Green_Related/GUIRelated_V3/Subs/Green_ChosenPathGUI_V3/Green_ChosenPathGUI_V3.tscn" type="PackedScene" id=2]

[node name="Green_WholeScreenGUI_ChosenList_V3" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 960, 540 )
mouse_filter = 2
custom_constants/margin_top = 20
custom_constants/margin_bottom = 20
script = ExtResource( 1 )

[node name="VBox" type="VBoxContainer" parent="."]
margin_top = 43.0
margin_right = 960.0
margin_bottom = 497.0
mouse_filter = 2
size_flags_vertical = 6
custom_constants/separation = 18

[node name="Green_ChosenPathGUI_Tier1" parent="VBox" instance=ExtResource( 2 )]
margin_left = 230.0
margin_right = 730.0
rect_min_size = Vector2( 500, 100 )
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Green_ChosenPathGUI_Tier2" parent="VBox" instance=ExtResource( 2 )]
margin_left = 230.0
margin_top = 118.0
margin_right = 730.0
margin_bottom = 218.0
rect_min_size = Vector2( 500, 100 )
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Green_ChosenPathGUI_Tier3" parent="VBox" instance=ExtResource( 2 )]
margin_left = 230.0
margin_top = 236.0
margin_right = 730.0
margin_bottom = 336.0
rect_min_size = Vector2( 500, 100 )
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Green_ChosenPathGUI_Tier4" parent="VBox" instance=ExtResource( 2 )]
margin_left = 230.0
margin_top = 354.0
margin_right = 730.0
margin_bottom = 454.0
rect_min_size = Vector2( 500, 100 )
size_flags_horizontal = 6
size_flags_vertical = 4
